--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
-RewriteEngine On
-RewriteBase /
-RewriteRule ^(.*)$ index.php/$1 [L]
+RewriteEngine on
+RewriteCond $1 !^(index\.php|assets|image|resources|robots\.txt)
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php?/$1 [L,QSA]
